// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DashboardNumCard Component Snapshot with displayNum and extraContent 1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation1 MuiCard-root width margin MuiPaper-rounded"
>
  <div
    className="MuiCardContent-root"
  >
    <div
      className={
        Object {
          "display": "flex",
          "justifyContent": "space-between",
        }
      }
    >
      <div>
        <div
          className="MuiBox-root MuiBox-root-165"
        >
          title
        </div>
        <div
          className="MuiBox-root MuiBox-root-166"
        >
          1
        </div>
      </div>
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
        />
      </svg>
    </div>
    <div>
      Extra Content Text
    </div>
  </div>
</div>
`;

exports[`DashboardNumCard Component Snapshot without displayNum and extraContent 1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation1 MuiCard-root width margin MuiPaper-rounded"
>
  <div
    className="MuiCardContent-root"
  >
    <div
      className={
        Object {
          "display": "flex",
          "justifyContent": "space-between",
        }
      }
    >
      <div>
        <div
          className="MuiBox-root MuiBox-root-154"
        >
          title
        </div>
        <div
          className="MuiBox-root MuiBox-root-155"
        >
          --
        </div>
      </div>
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
        />
      </svg>
    </div>
  </div>
</div>
`;
